# Endpoint_detection_response-master

./: .gitignore  COMPLETE_SYSTEM_FIX.md  docker-compose.full.yml  docker-compose.prod.yml  stress_test_simulation.ps1  stresstest.ps1  technical_documentation.md
backend/: create_token.py  rate_limit_test_results.json  requirements.txt  test_auth_token.py
backend/docker/: docker-compose.yml
backend/edr_server/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
backend/health/: views.py
backend/ingestion/: admin_views.py  command_views.py  consumers.py  dashboard_views.py  detection_models.py  models.py  models_mongo.py  ratelimit_utils.py  rbac_decorators.py  routing.py  rule_engine.py  serializers.py  simple.test.py  tasks.py  urls.py  views.py
backend/ingestion/management/commands/: init_roles.py  promote_user.py  seeds_rule.py
backend/ingestion/templates/: base.html
backend/ingestion/templates/admin/: admin_base.html  dashboard.html  rule_builder.html  user_form.html  user_list.html
backend/ingestion/templates/dashboard/: alert_detail.html  alert_list.html  events.html  home.html  response_actions.html  rules.html
backend/ingestion/templates/registration/: login.html
backend/ingestion/templatetags/: edr_filters.py
backend/testing/: RATE_LIMIT_TEST_GUIDE.md  STRESS_TEST_GUIDE.md  celery_diagnostic.py  check_alerts.py  check_data_quality.py  check_python_events.py  check_rule_status.py  create_token.py  debug_check_events.py  final_diagnosis.py  fix_false_positive.py  full_diagnostic.py  manual_rate_limit_test.ps1  rate_limit_test_results.json  redis_monitor.py  stress_test_suite.py  test_auth_flow.py  test_malware_simulation.py  test_rate_limiting.py  test_redis_verification.py  test_zstd_compression.py  troubleshooting_auth.md
documention/: BugFix_Report_ResponseActions.md  Comprehensive_QA_Bug_Report.md  Concept_Agent_Authentication.md  Concept_Rate_Limiting.md  Concept_Secret_Management.md  Detection_Engine_Deep_Dive.md  IMPLEMENTATION_NEXT_STEPS.md  Rate_Limiting_Implementation.md  Redis_Celery_Docker_Deep_Dive.md  Redis_Celery_Implementation_Guide.md  Redis_Django_Deep_Dive.md  Redis_for_Rate_Limiting_Explained.md  ResponseActions_Teaching_Guide.md  ResponseActions_Teaching_Guide_Part2.md  Response_Actions_Deep_Dive.md  System_Features_Deep_Dive.md  System_Review_and_Teaching_Report.md  responeimplementaion.md  responseAction
edr-agent/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.hpp  ConfigReader.cpp  ConfigReader.hpp  EdrAgent.cpp  EventConverter.cpp  EventConverter.hpp  HttpClient.cpp  HttpClient.hpp  SimpleGzip.cpp  SimpleGzip.hpp  SimpleZstd.cpp  SimpleZstd.hpp  WebSocketClient.cpp  WebSocketClient.hpp  config.json  miniz.c  miniz.h  sysmon-config.xml
